# ccsesh

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  install.ps1  install.sh  renovate.json
.claude/: settings.json
.claude/skills/manual-test/: SKILL.md
.claude/skills/release/: SKILL.md
.github/workflows/: ci.yml  release.yml
benches/: e2e.sh  internals.rs  timer.rs
docs/: SECURITY_AUDIT.md  distribution.md  internals.md  shell-integration.md
homebrew-tap/: README.md
homebrew-tap/Formula/: ccsesh.rb
src/: config.rs  discover.rs  display.rs  errors.rs  lib.rs  main.rs  parse.rs  shell.rs  types.rs
tests/: integration.rs
tests/fixtures/: array_content.jsonl  compact_summary.jsonl  image_paste.jsonl  meta_only.jsonl  newline_cwd.jsonl  no_cwd.jsonl  normal.jsonl  slash_command.jsonl  summary_only.jsonl  team_subagent.jsonl  truncated.jsonl  xml_markup.jsonl
winget/manifests/r/ryanlewis/ccsesh/0.1.0/: ryanlewis.ccsesh.installer.yaml  ryanlewis.ccsesh.locale.en-US.yaml  ryanlewis.ccsesh.yaml
