[package]
name = "ccsesh"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "List and resume recent Claude Code sessions"
repository = "https://github.com/ryanlewis/ccsesh"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
owo-colors = { version = "4", features = ["supports-colors"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
thiserror = "2"
anyhow = "1"

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
predicates = "3"
criterion = "0.8"

[[bench]]
name = "internals"
harness = false
